# CNN

./: CMakeLists.txt  main.cpp
src/cnn/: CMakeLists.txt
src/cnn/utils/: array3d.h  array3d_math.h  log.h  shape.h  utils.cpp  utils.h
